# CppFramework

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Timer.hpp  utility.hpp
include/Exception/: Error.hpp  Exception.hpp  SystemException.hpp
include/Message/: IMessageQueue.hpp  MessageQueueFactory.hpp  PosixMessageQueue.hpp  SynchronizedDeque.hpp
include/SubProcess/: ExecFamily.hpp  ILauncher.hpp  Process.hpp  ProcessResult.hpp  ProcessSpawner.hpp  Shell.hpp  StartInfo.hpp
include/Sync/: EventFlag.hpp
include/Task/: BackGroundWorker.hpp  EventRequest.hpp  EventTaskBase.hpp  EventTaskManager.hpp  MessageEventAggregator.hpp  MessageTask.hpp  StateMachine.hpp  StatementTask.hpp  Task.hpp  TaskBase.hpp  TaskPool.hpp
include/Task/interface/: IEventTask.hpp
include/Templates/: EnumBitset.hpp  EnumCast.hpp  EnumOperations.hpp  Property.hpp
lib/: CMakeLists.txt
lib/Exception/: Exception.cpp  SystemException.cpp
lib/SubProcess/: ExecFamily.cpp  Process.cpp  Shell.cpp  StartInfo.cpp
lib/Sync/: EventFlag.cpp
lib/Task/: BackGroundWorker.cpp  TaskBase.cpp  TaskPool.cpp
lib/Timer/: Timer.cpp
tests/: CMakeLists.txt
tests/MessageTest/: CMakeLists.txt  PosixMessageQueueTest.cpp  PosixMessageQueueTest.hpp  SynchronizedDequeTest.cpp  SynchronizedDequeTest.hpp
tests/SubProcessTest/: CMakeLists.txt  ProcessSpawnerTest.cpp  ProcessSpawnerTest.hpp  ProcessTest.cpp  ProcessTest.hpp  StartInfoTest.cpp  StartInfoTest.hpp
tests/SyncTest/: CMakeLists.txt  EventFlagTest.cpp  EventFlagTest.hpp
tests/TaskTest/: BackGroundWorkerTest.cpp  BackGroundWorkerTest.hpp  CMakeLists.txt  EventAggregatorTest.cpp  EventAggregatorTest.hpp  EventTaskManagerTest.cpp  EventTaskManagerTest.hpp  MessageRequestTest.cpp  MessageRequestTest.hpp  MessageTaskTest.cpp  MessageTaskTest.hpp  StatementTask.cpp  StatementTask.hpp  TaskPoolTest.cpp  TaskPoolTest.hpp
tests/TemplatesTest/: CMakeLists.txt  EnumBitsetTest.cpp  EnumBitsetTest.hpp  EnumOperationsTest.cpp  EnumOperationsTest.hpp  PropertyTest.cpp  PropertyTest.hpp
tests/TimerTest/: CMakeLists.txt  TimerTest.cpp
